[Priyanshu] ADD: Updated cart functionality and fixed related issues
