# app/controllers/api/v1/carts_controller.rb
@@ -2,8 +2,8 @@ class Api::V1::CartsController < ApplicationController
   before_action :authenticate_request 
 
   def add
-    book_id = params[:book_id] || params[:cart][:book_id]
-    quantity = params.dig(:cart, :quantity) || params[:quantity]
+    book_id = params[:book_id] || params.dig(:cart, :book_id)
+    quantity = params[:quantity] || params.dig(:cart, :quantity)
 
     return render json: { success: false, message: "Invalid quantity." }, status: :unprocessable_entity if book_id.nil? || quantity.to_i <= 0
 
@@ -27,10 +27,11 @@ class Api::V1::CartsController < ApplicationController
   def toggle_remove
     Rails.logger.debug "Current User: #{@current_user.inspect}"
     Rails.logger.debug "Received Params: #{params.inspect}"
+    Rails.logger.debug "Full Params: #{params.to_unsafe_h}"
 
     return render json: { success: false, message: 'Unauthorized - User not found' }, status: :unauthorized if @current_user.nil?
-
-    result = CartService.new(@current_user).toggle_cart_item(params[:book_id])
+    book_id = params[:book_id] || params.dig(:cart, :book_id)
+    result = CartService.new(@current_user).toggle_cart_item(book_id)  #params[:book_id]
 
     render json: result, status: result[:success] ? :ok : :unprocessable_entity
   end
